css/launchcircle.css
@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700');

html {
    height: 100%;
}

body {
    font-family: 'Poppins', sans-serif;
    font-weight: normal;
    overflow-x: hidden;
    padding: 0;
    min-width: 320px;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

label,*:before,*:after,select {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

ol {
    list-style: none;
}

ol > li {
    counter-increment: item;
    margin-bottom: 5px;
    position: relative;
}

ol > li:before {
    margin-right: 10px;
    content: counter(item);
    color: #acabaf;
    display: inline-block;
    position: absolute;
    font-size: .95em;
    top: 0;
    left: -3ch;
    font-weight: 500;
}

@media (min-width: 998px) {

    .stuck > .container,
    footer > .container,
    header > .container {
        width: 995px;
        left: 1rem;
    }

    .costume.container {
        width: 1075px;
        max-width: 100%;
        left: inherit;
    }
}

@media (min-width: 1200px) {
    .stuck > .container,
    footer > .container,
    header > .container {
        width: 1200px;
    }

    .container {
        width: 1187px;
    }

    .costume.container {
        width: 1280px;
    }

}

@media (min-width: 1350px) {

    .stuck > .container,
    footer > .container,
    header > .container {
        width: 1100px;
        left: 0;
    }

    .costume.container {
        width: 1200px;
        max-width: 100%;
        left: -8vh;
    }
}

@media (min-width: 1400px) {
    .stuck > .container,
    footer > .container,
    header > .container {
        width: 1180px;
    }

    .costume.container {
        width: 1222px;
        max-width: 100%;
        left: -8vh;
    }
}

.page-scroll.top {
    position: fixed;
    right: 30px;
    top: 50%;
    height: 30px;
    width: 30px;
    transform: translate(0%,-75%) rotate(270deg);
    background-color: rgba(158, 159, 250, 1);
    background-image: url("/images/arrow-pointing-to-right.svg");
    border-radius: 100%;
    background-position: 50% 50%;
    background-repeat: no-repeat;
    text-indent: -99999px;
    opacity: 0;
    transition: opacity .55s ease-in;
}

.page-scroll.active {
    opacity: 1;
}

::-moz-selection, ::selection {
    text-shadow: none;
    background: rgba(137, 138, 234, 1);
    color: #fff;
}

*:focus,*:active,*:link,*:hover {
    outline: none !important;
}

.get-on-gplay,.get-on-astore {
    background-size: contain;
    background-repeat: no-repeat;
    padding-bottom: 2.5em;
}

.get-on-astore {
    background-image: url("/images/icon/get-on-astore.svg");
}

.get-on-gplay {
    background-image: url("/images/icon/get-on-gplay.svg");
}

/*navbar*/

.navbar-toggler {
    margin: 5px 0;
    right: 0;
    border: 0;
}

/* --------------------------------------
 ANIMATED
-----------------------------------------*/

.animated, .active.animated {
    -webkit-animation-duration: 1s;
    animation-duration: 1s;
    -webkit-animation-fill-mode: both;
    animation-fill-mode: both;
}

@-webkit-keyframes fadeInRightBig {
    from {
        opacity: 0;
        -webkit-transform: translate3d(2000px, 0, 0);
        transform: translate3d(2000px, 0, 0);
    }

    to {
        opacity: 1;
        -webkit-transform: none;
        transform: none;
    }
}

@keyframes fadeInRightBig {
    from {
        opacity: 0;
        -webkit-transform: translate3d(2000px, 0, 0);
        transform: translate3d(2000px, 0, 0);
    }

    to {
        opacity: 1;
        -webkit-transform: none;
        transform: none;
    }
}

.fadeInRightBig {
    -webkit-animation-name: fadeInRightBig;
    animation-name: fadeInRightBig;
}

@-webkit-keyframes fadeInLeftBig {
    from {
        opacity: 0;
        -webkit-transform: translate3d(-2000px, 0, 0);
        transform: translate3d(-2000px, 0, 0);
    }

    to {
        opacity: 1;
        -webkit-transform: none;
        transform: none;
    }
}

@keyframes fadeInLeftBig {
    from {
        opacity: 0;
        -webkit-transform: translate3d(-2000px, 0, 0);
        transform: translate3d(-2000px, 0, 0);
    }

    to {
        opacity: 1;
        -webkit-transform: none;
        transform: none;
    }
}

.fadeInLeftBig {
    -webkit-animation-name: fadeInLeftBig;
    animation-name: fadeInLeftBig;
}

@-webkit-keyframes fadeInDown {
    from {
        opacity: 0;
        -webkit-transform: translate3d(0, -100%, 0);
        transform: translate3d(0, -100%, 0);
    }

    to {
        opacity: 1;
        -webkit-transform: none;
        transform: none;
    }
}

@keyframes fadeInDown {
    from {
        opacity: 0;
        -webkit-transform: translate3d(0, -100%, 0);
        transform: translate3d(0, -100%, 0);
    }

    to {
        opacity: 1;
        -webkit-transform: none;
        transform: none;
    }
}

.fadeInDown {
    -webkit-animation-name: fadeInDown;
    animation-name: fadeInDown;
}

@-webkit-keyframes fadeInUp {
    from {
        opacity: 0;
        -webkit-transform: translate3d(0, 100%, 0);
        transform: translate3d(0, 100%, 0);
    }

    to {
        opacity: 1;
        -webkit-transform: none;
        transform: none;
    }
}

@keyframes fadeInUp {
    from {
        opacity: 0;
        -webkit-transform: translate3d(0, 100%, 0);
        transform: translate3d(0, 100%, 0);
    }

    to {
        opacity: 1;
        -webkit-transform: none;
        transform: none;
    }
}

.fadeInUp {
    -webkit-animation-name: fadeInUp;
    animation-name: fadeInUp;
}

.carousel-fade .carousel-item {
    opacity: 0;
    transition: opacity .55s ease-in;
}

.carousel-fade .carousel-item.active {
    opacity: 1;
}

/* --------------------------------------
 TYPOGRAPHY
-----------------------------------------*/

a {
    outline: 0;
    color: rgba(87, 85, 89, 1);
}


p {
    color: #9C9BA0;
    font-size: 14px;
    line-height: 23px;
    font-weight: 300;
}
/* ... */

